--- a/packages/extension-host-sub-worker/tsconfig.json
+++ b/packages/extension-host-sub-worker/tsconfig.json
@@ -15,7 +15,9 @@
     "assumeChangesOnlyAffectDirectDependencies": true,
     "strict": true,
     "useUnknownInCatchVariables": false,
-    "composite": true
+    "composite": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowImportingTsExtensions": true
   },
   "include": ["src", "test"]
 }
