--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@lerna/legacy-package-management": "^8.1.9",
+    "@lvce-editor/eslint-config": "^1.23.0",
     "@types/eslint__js": "^8.42.3",
     "eslint": "^9.20.0",
     "eslint-plugin-perfectionist": "^4.8.0",
